tests/ui/traits/const-traits/eval-bad-signature.stderr
error[E0053]: method `value` has an incompatible type for trait
  --> $DIR/eval-bad-signature.rs:17:19
   |
LL |     fn value() -> i64 {
   |                   ^^^ expected `u32`, found `i64`
   |
note: type in trait
  --> $DIR/eval-bad-signature.rs:7:19
   |
LL |     fn value() -> u32;
   |                   ^^^
   = note: expected signature `fn() -> u32`
              found signature `fn() -> i64`
help: change the output type to match the trait
   |
LL -     fn value() -> i64 {
LL +     fn value() -> u32 {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0053`.
